<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 Aurélien Chabot <aurelien@chabot.fr>

  This file is part of DroidUPNP.

  DroidUPNP is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  DroidUPNP is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with DroidUPNP.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

	<!-- General -->
	<string name="app_name">DroidUPnP</string>
	<string name="app_url">https://github.com/trishika/DroidUPnP</string>
	<string name="version">Version</string>

	<!-- Navigation drawer -->
	<string name="contentdirectory">Content directory</string>
	<string name="renderer">Renderer</string>
	<string name="device_list_empty">No device available</string>
	<string name="navigation_drawer_open">Open device list</string>
	<string name="navigation_drawer_close">Close device list</string>

	<!--  Menu -->
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_quit">Quit</string>
	<string name="menu_search">Search</string>

	<!-- Option -->
	<string name="pref_contentdirectory_title">Content Directory</string>
	<string name="pref_contentdirectory_desc">Activate a local Content Directory server</string>
	<string name="pref_contentDirectory_display_name">Display Name</string>
	<string name="pref_contentDirectory_share_contentdirectory">Share media</string>
	<string name="pref_contentDirectory_share_contentdirectory_desc">Share media with other device on network</string>
	<string name="pref_share_media_title">Type of media to share</string>
	<string name="pref_contentDirectory_audio_title">Audio</string>
	<string name="pref_contentDirectory_audio_desc">Share audio</string>
	<string name="pref_contentDirectory_image_title">Image</string>
	<string name="pref_contentDirectory_image_desc">Share image</string>
	<string name="pref_contentDirectory_video_title">Video</string>
	<string name="pref_contentDirectory_video_desc">Share video</string>
	<string name="pref_about_title">About</string>
	<string name="pref_about_desc"></string>
	<string name="pref_theme_title">Theme</string>
	<string name="pref_theme_desc"></string>

	<!-- Popup -->
	<string name="OK">OK</string>
	<string name="loading">Loading...</string>
	<string name="selectRenderer">Select a Renderer</string>
	<string name="noRenderer">There is no renderer available</string>
	<string name="selectContentDirectory">Select a Content directory</string>

    <!-- Long click options -->
    <string name="launch_local_viewer">Launch local viewer</string>
    <string name="nothing_on_device_can_open_item">Nothing on your device can view/open this item</string>

	<!-- Now Playing -->
	<string name="duration">00:00:00</string>

	<!-- Now Playing Footer -->
	<string name="play">Play</string>
	<string name="pause">Pause</string>
	<string name="stop">Stop</string>
	<string name="next">Next</string>
	<string name="back">Back</string>
	<string name="mute">Mute</string>

	<!-- Device Info -->
	<string name="manufacturer">Manufacturer</string>
	<string name="manufacturer_url">Manufacturer URL</string>
	<string name="model_name">Model name</string>
	<string name="model_url">Model URL</string>
	<string name="model_number">Model number</string>
	<string name="model_desc">Model description</string>
	<string name="presention_url">Presentation URL</string>
	<string name="desc_xml">Description XML</string>
	<string name="udn">UDN</string>
	<string name="separator"> : </string>

	<!-- About -->
	<string name="copyright">Copyright</string>
	<string name="about_copyright">Copyright © 2013 Aurélien Chabot</string>
	<string name="about_contact">Contact : aurelien@chabot.fr</string>
	<string name="license">License</string>
	<string name="about_license">GPLv3</string>
	<string name="link_license">http://www.gnu.org/licenses/gpl-3.0.html</string>
	<string name="license_other">Library license</string>
	<string name="about_license_other"></string>
	<string name="source">Source Code</string>
	<string name="source_url">http://github.com/trishika/droidupnp</string>
	<string name="more">More information</string>
	<string name="about_more"></string>
	<string name="about_app">
		<![CDATA[
		<p><b>DroidUPnP is free software licensed under GPLv3.</b>
		Source code is available on <a href="https://github.com/trishika/DroidUPnP">GitHub</a>.
		If you\'re a develloper contribution are welcome !</p>
		]]>
	</string>
	<string name="about_cling">
		<![CDATA[
		<p>DroidUPnP use <b>Cling</b> which is a Java/Android UPnP library. Cling is licensed under LGPLv2.
		Source code is available at <a href="http://4thline.org/projects/cling/">4thline.org</a></p>
		]]>
	</string>
	<string name="about_nanohttpd">
		<![CDATA[
		<p>DroidUPnP use <b>NanoHttpd</b>. NanoHttpd is under a modify BSD license.
		Source code is available on <a href="https://github.com/NanoHttpd/nanohttpd">GitHub</a>.
		]]>
	</string>
	<string name="about_pulltorefresh">
		<![CDATA[
		<p>DroidUPnP use <b>ActionBar-PullToRefresh</b>. ActionBar-PullToRefresh is under the Apache License, Version 2.0.
		Source code is available on <a href="https://github.com/chrisbanes/ActionBar-PullToRefresh">GitHub</a>.
		]]>
	</string>

</resources>
