<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 Aurélien Chabot <aurelien@chabot.fr>

  This file is part of DroidUPNP.

  DroidUPNP is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  DroidUPNP is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with DroidUPNP.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="20dp" >

	<TextView
		android:id="@+id/about_cling"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:text="@string/about_cling" />

	<TextView
		android:id="@+id/about_nanohttpd"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:text="@string/about_nanohttpd"
		android:layout_marginTop="30dp" />

	<TextView
		android:id="@+id/about_pulltorefresh"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:text="@string/about_pulltorefresh"
		android:layout_marginTop="30dp" />

</LinearLayout>
