<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 Aurélien Chabot <aurelien@chabot.fr>

  This file is part of DroidUPNP.

  DroidUPNP is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  DroidUPNP is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with DroidUPNP.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >

	<View
		android:layout_width="fill_parent"
		android:layout_height="20dip"
		android:layout_weight="0.5"
		android:background="@android:color/transparent"/>

	<SeekBar
		android:id="@+id/progressBar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:layout_alignParentLeft="true"
		android:layout_weight="1" />

	<TextView
		android:id="@+id/title"
		android:textIsSelectable="false"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/progressBar"
		android:ellipsize="marquee"
		android:singleLine="true"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:textSize="18sp"
		android:textStyle="bold" />

	<TextView
		android:id="@+id/artist"
		android:textIsSelectable="false"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/title"
		android:ellipsize="marquee"
		android:singleLine="true"
		android:paddingLeft="10dip"
		android:paddingRight="10dip"
		android:textSize="15sp"
		android:textStyle="italic" />

	<ImageButton
		android:id="@+id/play_pauseButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="30dip"
		android:layout_alignParentRight="true"
		android:layout_below="@id/progressBar"
		android:contentDescription="@string/play"
		android:paddingLeft="10dip"
		android:paddingRight="10dip"
		android:background="@android:color/transparent"
		android:src="@drawable/play" />

	<ImageButton
		android:id="@+id/stopButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toLeftOf="@id/play_pauseButton"
		android:layout_below="@id/progressBar"
		android:contentDescription="@string/stop"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:background="@android:color/transparent"
		android:src="@drawable/stop" />

	<LinearLayout
		android:id="@+id/volumeLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_gravity="center_vertical|center_horizontal"
		android:paddingBottom="5dp"
		android:paddingTop="5dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp" >

		<ImageButton
			android:id="@+id/volumeIcon"
			android:layout_width="40dp"
			android:layout_height="match_parent"
			android:contentDescription="@string/mute"
			android:paddingLeft="0dp"
			android:paddingRight="15dp"
			android:background="@android:color/transparent"
			android:src="@drawable/volume" />

		<SeekBar
			android:id="@+id/volume"
			android:layout_height="match_parent"
			android:layout_width="match_parent" />

	</LinearLayout>


	<TextView
		android:id="@+id/trackDurationElapse"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical|fill_vertical"
		android:layout_marginRight="10dp"
		android:shadowColor="#000"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:text="@string/duration"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:visibility="invisible" />

	<TextView
		android:id="@+id/trackDurationRemaining"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical|fill_vertical"
		android:layout_marginLeft="10dp"
		android:shadowColor="#000"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:text="@string/duration"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textStyle="bold"
		android:visibility="invisible" />

</RelativeLayout>
